@@ -16,14 +16,11 @@
  */
 package org.apache.calcite.util;
 
-import org.apache.commons.io.input.ReaderInputStream;
-
 import com.google.common.io.CharSource;
 
 import org.checkerframework.checker.nullness.qual.Nullable;
 
 import java.io.File;
-import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
@@ -33,10 +30,13 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.Locale;
-import java.util.Objects;
+import java.util.Optional;
 import java.util.zip.GZIPInputStream;
+
+import static java.util.Objects.requireNonNull;
 
 /**
  * Utilities for {@link Source}.
@@ -62,12 +62,18 @@ public abstract class Sources {
     }
   }
 
-  /**
-   * Create {@link Source} from a generic text source such as string, {@link java.nio.CharBuffer}
-   * or text file. Useful when data is already in memory or can't be directly read from
+  /** Creates a {@link Source} from a character sequence such as a
+   * {@link String}. */
+  public static Source of(CharSequence s) {
+    return fromCharSource(CharSource.wrap(s));
+  }
+
+  /** Creates a {@link Source} from a generic text source such as string,
+   * {@link java.nio.CharBuffer} or text file. Useful when data is already
+   * in memory or can't be directly read from
    * a file or url.
    *
-   * @param source generic "re-redable" source of characters
+   * @param source generic "re-readable" source of characters
    * @return {@code Source} delegate for {@code CharSource} (can't be null)
    * @throws NullPointerException when {@code source} is null
    */
@@ -77,7 +83,7 @@ public abstract class Sources {
 
   public static Source url(String url) {
     try {
-      return of(new URL(url));
+      return of(URI.create(url).toURL());
     } catch (MalformedURLException | IllegalArgumentException e) {
       throw new RuntimeException("Malformed URL: '" + url + "'", e);
     }
@@ -101,7 +107,7 @@ public abstract class Sources {
     private final CharSource charSource;
 
     private GuavaCharSource(CharSource charSource) {
-      this.charSource = Objects.requireNonNull(charSource, "charSource");
+      this.charSource = requireNonNull(charSource, "charSource");
     }
 
     private UnsupportedOperationException unsupported() {
@@ -117,6 +123,10 @@ public abstract class Sources {
       throw unsupported();
     }
 
+    @Override public Optional<File> fileOpt() {
+      return Optional.empty();
+    }
+
     @Override public String path() {
       throw unsupported();
     }
@@ -126,8 +136,7 @@ public abstract class Sources {
     }
 
     @Override public InputStream openStream() throws IOException {
-      // use charSource.asByteSource() once calcite can use guava v21+
-      return new ReaderInputStream(reader(), StandardCharsets.UTF_8);
+      return charSource.asByteSource(StandardCharsets.UTF_8).openStream();
     }
 
     @Override public String protocol() {
@@ -167,19 +176,19 @@ public abstract class Sources {
     private final boolean urlGenerated;
 
     private FileSource(URL url) {
-      this.url = Objects.requireNonNull(url, "url");
+      this.url = requireNonNull(url, "url");
       this.file = urlToFile(url);
       this.urlGenerated = false;
     }
 
     private FileSource(File file) {
-      this.file = Objects.requireNonNull(file, "file");
+      this.file = requireNonNull(file, "file");
       this.url = fileToUrl(file);
       this.urlGenerated = true;
     }
 
     private File fileNonNull() {
-      return Objects.requireNonNull(file, "file");
+      return requireNonNull(file, "file");
     }
 
     private static @Nullable File urlToFile(URL url) {
@@ -214,7 +223,7 @@ public abstract class Sources {
           // That is why java.net.URLEncoder.encode(java.lang.String, java.lang.String) is not
           // suitable because it replaces " " with "+".
           String encodedPath = new URI(null, null, filePath, null).getRawPath();
-          return new URL("file", null, 0, encodedPath);
+          return URI.create("file:" + encodedPath).toURL();
         } catch (MalformedURLException | URISyntaxException e) {
           throw new IllegalArgumentException("Unable to create URL for file " + filePath, e);
         }
@@ -247,6 +256,10 @@ public abstract class Sources {
       return file;
     }
 
+    @Override public Optional<File> fileOpt() {
+      return Optional.ofNullable(file);
+    }
+
     @Override public String protocol() {
       return file != null ? "file" : url.getProtocol();
     }
@@ -276,7 +289,7 @@ public abstract class Sources {
 
     @Override public InputStream openStream() throws IOException {
       if (file != null) {
-        return new FileInputStream(file);
+        return Files.newInputStream(file.toPath());
       } else {
         return url.openStream();
       }
@@ -327,7 +340,8 @@ public abstract class Sources {
       if (isFile(parent)) {
         if (isFile(this)
             && fileNonNull().getPath().startsWith(parent.file().getPath())) {
-          String rest = fileNonNull().getPath().substring(parent.file().getPath().length());
+          String rest =
+              fileNonNull().getPath().substring(parent.file().getPath().length());
           if (rest.startsWith(File.separator)) {
             return Sources.file(null, rest.substring(File.separator.length()));
           }
@@ -335,8 +349,9 @@ public abstract class Sources {
         return this;
       } else {
         if (!isFile(this)) {
-          String rest = Sources.trimOrNull(url.toExternalForm(),
-              parent.url().toExternalForm());
+          String rest =
+              Sources.trimOrNull(url.toExternalForm(),
+                  parent.url().toExternalForm());
           if (rest != null
               && rest.startsWith("/")) {
             return Sources.file(null, rest.substring(1));
