@@ -25,6 +25,11 @@ import org.junit.jupiter.api.Test;
 /**
  * Tests for using Calcite with Spark as an internal engine, as implemented by
  * the {@link org.apache.calcite.adapter.spark} package.
+ *
+ * <p>Under JDK 23 and higher, this test requires
+ * "{@code -Djava.security.manager=allow}" command-line arguments due to
+ * Hadoop's use of deprecated methods in {@link javax.security.auth.Subject}.
+ * These arguments are set automatically if you run via Gradle.
  */
 class SparkAdapterTest {
   private static final String VALUES0 = "(values (1, 'a'), (2, 'b'))";
@@ -63,10 +68,12 @@ class SparkAdapterTest {
     final String plan = "PLAN="
         + "EnumerableValues(tuples=[[{ 1, 'a' }, { 2, 'b' }]])";
 
-    final String expectedResult = "EXPR$0=1; EXPR$1=a\n"
-        + "EXPR$0=2; EXPR$1=b\n";
+    final String[] expectedResult = {
+        "EXPR$0=1; EXPR$1=a",
+        "EXPR$0=2; EXPR$1=b"
+    };
 
-    sql(sql).returns(expectedResult)
+    sql(sql).returnsOrdered(expectedResult)
         .explainContains(plan);
   }
 
@@ -76,13 +83,13 @@ class SparkAdapterTest {
         + "from " + VALUES1 + "\n"
         + "where x < 2";
 
-    final String expectedResult = "X=1; Y=a\n";
+    final String[] expectedResult = {"X=1; Y=a"};
 
     final String plan = "PLAN="
         + "EnumerableCalc(expr#0..1=[{inputs}], expr#2=[2], expr#3=[<($t0, $t2)], proj#0..1=[{exprs}], $condition=[$t3])\n"
         + "  EnumerableValues(tuples=[[{ 1, 'a' }, { 2, 'b' }]])\n";
 
-    sql(sql).returns(expectedResult)
+    sql(sql).returnsUnordered(expectedResult)
         .explainContains(plan);
   }
 
@@ -94,10 +101,12 @@ class SparkAdapterTest {
         + "EnumerableAggregate(group=[{0, 1}])\n"
         + "  EnumerableValues(tuples=[[{ 1, 'a' }, { 2, 'b' }, { 1, 'b' }, { 2, 'c' }, { 2, 'c' }]])\n\n";
 
-    final String expectedResult = "X=1; Y=a\n"
-        + "X=1; Y=b\n"
-        + "X=2; Y=b\n"
-        + "X=2; Y=c";
+    final String[] expectedResult = {
+        "X=1; Y=a",
+        "X=1; Y=b",
+        "X=2; Y=b",
+        "X=2; Y=c"
+    };
 
     sql(sql).returnsUnordered(expectedResult)
         .explainContains(plan);
@@ -118,8 +127,10 @@ class SparkAdapterTest {
         + "      EnumerableAggregate(group=[{0, 1}], groups=[[{0, 1}, {0}]], SUM_X=[$SUM0($0)], MIN_Y=[MIN($1)], MAX_Y=[MAX($1)], CNT_Y=[COUNT()], $g=[GROUPING($0, $1)])\n"
         + "        EnumerableValues(tuples=[[{ 1, 'a' }, { 2, 'b' }, { 1, 'b' }, { 2, 'c' }, { 2, 'c' }]])\n";
 
-    final String expectedResult = "SUM_X=2; MIN_Y=a; MAX_Y=b; CNT_Y=2; CNT_DIST_Y=2\n"
-        + "SUM_X=6; MIN_Y=b; MAX_Y=c; CNT_Y=3; CNT_DIST_Y=2";
+    final String[] expectedResult = {
+        "SUM_X=2; MIN_Y=a; MAX_Y=b; CNT_Y=2; CNT_DIST_Y=2",
+        "SUM_X=6; MIN_Y=b; MAX_Y=c; CNT_Y=3; CNT_DIST_Y=2"
+    };
 
     sql(sql).returnsUnordered(expectedResult)
         .explainContains(plan);
@@ -209,7 +220,7 @@ class SparkAdapterTest {
         + "having count(*) > 2";
 
     final String plan = "PLAN="
-        + "EnumerableCalc(expr#0..1=[{inputs}], expr#2=[2], expr#3=[>($t1, $t2)], X=[$t0], $condition=[$t3])\n"
+        + "EnumerableCalc(expr#0..1=[{inputs}], expr#2=[2:BIGINT], expr#3=[>($t1, $t2)], X=[$t0], $condition=[$t3])\n"
         + "  EnumerableAggregate(group=[{0}], agg#0=[COUNT()])\n"
         + "    EnumerableValues(tuples=[[{ 1, 'a' }, { 2, 'b' }, { 1, 'b' }, { 2, 'c' }, { 2, 'c' }]])\n\n";
 
@@ -229,17 +240,17 @@ class SparkAdapterTest {
         + "from " + VALUES2;
 
     final String plan = "PLAN="
-        + "EnumerableUnion(all=[true])\n"
-        + "  EnumerableValues(tuples=[[{ 1, 'a' }, { 2, 'b' }]])\n"
-        + "  EnumerableValues(tuples=[[{ 1, 'a' }, { 2, 'b' }, { 1, 'b' }, { 2, 'c' }, { 2, 'c' }]])\n";
+        + "EnumerableValues(tuples=[[{ 1, 'a' }, { 2, 'b' }, { 1, 'a' }, { 2, 'b' }, { 1, 'b' }, { 2, 'c' }, { 2, 'c' }]])\n\n";
 
-    final String expectedResult = "X=1; Y=a\n"
-        + "X=1; Y=a\n"
-        + "X=1; Y=b\n"
-        + "X=2; Y=b\n"
-        + "X=2; Y=b\n"
-        + "X=2; Y=c\n"
-        + "X=2; Y=c";
+    final String[] expectedResult = {
+        "X=1; Y=a",
+        "X=1; Y=a",
+        "X=1; Y=b",
+        "X=2; Y=b",
+        "X=2; Y=b",
+        "X=2; Y=c",
+        "X=2; Y=c"
+    };
 
     sql(sql).returnsUnordered(expectedResult)
         .explainContains(plan);
@@ -253,14 +264,14 @@ class SparkAdapterTest {
         + "from " + VALUES2;
 
     final String plan = "PLAN="
-        + "EnumerableUnion(all=[false])\n"
-        + "  EnumerableValues(tuples=[[{ 1, 'a' }, { 2, 'b' }]])\n"
-        + "  EnumerableValues(tuples=[[{ 1, 'a' }, { 2, 'b' }, { 1, 'b' }, { 2, 'c' }, { 2, 'c' }]])\n";
+        + "EnumerableValues(tuples=[[{ 1, 'a' }, { 2, 'b' }, { 1, 'b' }, { 2, 'c' }]])\n\n";
 
-    final String expectedResult = "X=1; Y=a\n"
-        + "X=1; Y=b\n"
-        + "X=2; Y=b\n"
-        + "X=2; Y=c";
+    final String[] expectedResult = {
+        "X=1; Y=a",
+        "X=1; Y=b",
+        "X=2; Y=b",
+        "X=2; Y=c"
+    };
 
     sql(sql).returnsUnordered(expectedResult)
         .explainContains(plan);
@@ -278,8 +289,10 @@ class SparkAdapterTest {
         + "  EnumerableValues(tuples=[[{ 1, 'a' }, { 2, 'b' }]])\n"
         + "  EnumerableValues(tuples=[[{ 1, 'a' }, { 2, 'b' }, { 1, 'b' }, { 2, 'c' }, { 2, 'c' }]])\n";
 
-    final String expectedResult = "X=1; Y=a\n"
-        + "X=2; Y=b";
+    final String[] expectedResult = {
+        "X=1; Y=a",
+        "X=2; Y=b"
+    };
 
     sql(sql).returnsUnordered(expectedResult)
         .explainContains(plan);
@@ -380,11 +393,13 @@ class SparkAdapterTest {
         + "    EnumerableValues(tuples=[[{ 1, 'a' }, { 2, 'b' }]])\n"
         + "    EnumerableValues(tuples=[[{ 1, 'a' }, { 2, 'b' }, { 1, 'b' }, { 2, 'c' }, { 2, 'c' }]])\n\n";
 
-    final String expectedResult = "Y=a; Z=a\n"
-        + "Y=b; Z=a\n"
-        + "Y=b; Z=b\n"
-        + "Y=c; Z=b\n"
-        + "Y=c; Z=b";
+    final String[] expectedResult = {
+        "Y=a; Z=a",
+        "Y=b; Z=a",
+        "Y=b; Z=b",
+        "Y=c; Z=b",
+        "Y=c; Z=b"
+    };
 
     sql(sql).returnsUnordered(expectedResult)
         .explainContains(plan);
@@ -403,11 +418,13 @@ class SparkAdapterTest {
         + "    EnumerableValues(tuples=[[{ 1, 'a' }, { 2, 'b' }]])\n"
         + "    EnumerableValues(tuples=[[{ 1, 'a' }, { 2, 'b' }, { 1, 'b' }, { 2, 'c' }, { 2, 'c' }]])\n\n";
 
-    final String expectedResult = "Z=a\n"
-        + "Z=a\n"
-        + "Z=b\n"
-        + "Z=b\n"
-        + "Z=b";
+    final String[] expectedResult = {
+        "Z=a",
+        "Z=a",
+        "Z=b",
+        "Z=b",
+        "Z=b"
+    };
 
     sql(sql).returnsUnordered(expectedResult)
         .explainContains(plan);
@@ -477,8 +494,10 @@ class SparkAdapterTest {
         + "EnumerableCalc(expr#0..1=[{inputs}], expr#2=[Sarg[[3..4]]], expr#3=[SEARCH($t0, $t2)], proj#0..1=[{exprs}], $condition=[$t3])\n"
         + "  EnumerableValues(tuples=[[{ 1, 'a' }, { 2, 'b' }, { 3, 'b' }, { 4, 'c' }, { 2, 'c' }]])\n\n";
 
-    final String expectedResult = "X=3; Y=b\n"
-        + "X=4; Y=c";
+    final String[] expectedResult = {
+        "X=3; Y=b",
+        "X=4; Y=c"
+    };
 
     sql(sql).returnsUnordered(expectedResult)
         .explainContains(plan);
@@ -493,8 +512,10 @@ class SparkAdapterTest {
         + "EnumerableCalc(expr#0..1=[{inputs}], expr#2=[Sarg[3, 4]], expr#3=[SEARCH($t0, $t2)], proj#0..1=[{exprs}], $condition=[$t3])\n"
         + "  EnumerableValues(tuples=[[{ 1, 'a' }, { 2, 'b' }, { 3, 'b' }, { 4, 'c' }, { 2, 'c' }]])\n\n";
 
-    final String expectedResult = "X=3; Y=b\n"
-        + "X=4; Y=c";
+    final String[] expectedResult = {
+        "X=3; Y=b",
+        "X=4; Y=c"
+    };
 
     sql(sql).returnsUnordered(expectedResult)
         .explainContains(plan);
@@ -508,11 +529,13 @@ class SparkAdapterTest {
     final String plan = "PLAN="
         + "EnumerableValues(tuples=[[{ 1, 'a' }, { 2, 'b' }, { 1, 'b' }, { 2, 'c' }, { 2, 'c' }]])\n\n";
 
-    final String expectedResult = "X=1; Y=a\n"
-        + "X=1; Y=b\n"
-        + "X=2; Y=b\n"
-        + "X=2; Y=c\n"
-        + "X=2; Y=c";
+    final String[] expectedResult = {
+        "X=1; Y=a",
+        "X=1; Y=b",
+        "X=2; Y=b",
+        "X=2; Y=c",
+        "X=2; Y=c"
+    };
 
     sql(sql).returnsUnordered(expectedResult)
         .explainContains(plan);
@@ -541,11 +564,13 @@ class SparkAdapterTest {
         + "EnumerableCalc(expr#0..1=[{inputs}], expr#2=[Sarg[1, 2]], expr#3=[SEARCH($t0, $t2)], proj#0..1=[{exprs}], $condition=[$t3])\n"
         + "  EnumerableValues(tuples=[[{ 1, 'a' }, { 2, 'b' }, { 1, 'b' }, { 2, 'c' }, { 2, 'c' }]])\n\n";
 
-    final String expectedResult = "X=1; Y=a\n"
-        + "X=1; Y=b\n"
-        + "X=2; Y=b\n"
-        + "X=2; Y=c\n"
-        + "X=2; Y=c";
+    final String[] expectedResult = {
+        "X=1; Y=a",
+        "X=1; Y=b",
+        "X=2; Y=b",
+        "X=2; Y=c",
+        "X=2; Y=c"
+    };
 
     sql(sql).returnsUnordered(expectedResult)
         .explainContains(plan);
@@ -559,11 +584,13 @@ class SparkAdapterTest {
     final String plan = "PLAN="
         + "EnumerableValues(tuples=[[{ 1, 'a' }, { 2, 'b' }, { 1, 'b' }, { 2, 'c' }, { 2, 'c' }]])\n\n";
 
-    final String expectedResult = "X=1; Y=a\n"
-        + "X=1; Y=b\n"
-        + "X=2; Y=b\n"
-        + "X=2; Y=c\n"
-        + "X=2; Y=c";
+    final String[] expectedResult = {
+        "X=1; Y=a",
+        "X=1; Y=b",
+        "X=2; Y=b",
+        "X=2; Y=c",
+        "X=2; Y=c"
+    };
 
     sql(sql).returnsUnordered(expectedResult)
         .explainContains(plan);
@@ -601,10 +628,12 @@ class SparkAdapterTest {
         + "  EnumerableCalc(expr#0..1=[{inputs}], expr#2=[1], expr#3=[>($t0, $t2)], proj#0..1=[{exprs}], $condition=[$t3])\n"
         + "    EnumerableValues(tuples=[[{ 1, 'a' }, { 2, 'b' }, { 1, 'b' }, { 2, 'c' }, { 2, 'c' }]])\n";
 
-    final String expectedResult = "X=2; Y=b\n"
-        + "X=2; Y=b\n"
-        + "X=2; Y=c\n"
-        + "X=2; Y=c";
+    final String[] expectedResult = {
+        "X=2; Y=b",
+        "X=2; Y=b",
+        "X=2; Y=c",
+        "X=2; Y=c"
+    };
 
     sql(sql).returnsUnordered(expectedResult)
         .explainContains(plan);
@@ -643,8 +672,10 @@ class SparkAdapterTest {
         + "EnumerableCalc(expr#0..1=[{inputs}], expr#2=[1], expr#3=[+($t0, $t2)], expr#4=[>($t3, $t2)], X=[$t0], $condition=[$t4])\n"
         + "  EnumerableValues(tuples=[[{ 1, 'a' }, { 2, 'b' }]])\n\n";
 
-    final String expectedResult = "X=1\n"
-        + "X=2";
+    final String[] expectedResult = {
+        "X=1",
+        "X=2"
+    };
 
     sql(sql).returnsUnordered(expectedResult)
         .explainContains(plan);
@@ -689,8 +720,10 @@ class SparkAdapterTest {
         + "EnumerableCalc(expr#0..1=[{inputs}], expr#2=[/($t0, $t0)], expr#3=[1], expr#4=[=($t2, $t3)], X=[$t0], $condition=[$t4])\n"
         + "  EnumerableValues(tuples=[[{ 1, 'a' }, { 2, 'b' }]])\n\n";
 
-    final String expectedResult = "X=1\n"
-        + "X=2";
+    final String[] expectedResult = {
+        "X=1",
+        "X=2"
+    };
 
     sql(sql).returnsUnordered(expectedResult)
         .explainContains(plan);
